fix: filtering and sorting problems